k8s/postgres-statefulset.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db-lb
spec:
  selector:
    app: postgresql-db
  type: LoadBalancer
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql-db
spec:
  serviceName: postgres-db-lb                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        [...]
  selector:
    matchLabels:
      app: postgresql-db
  replicas: 1
  template:
    metadata:
      labels:
        app: postgresql-db
    spec:
      # Official Postgres Container
      containers:
        - name: postgresql-db
          image: postgres
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          # Resource Limits
          resources:
            requests:
              memory: "265Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          # Data Volume
          volumeMounts:
            - name: postgresql-db-disk
              mountPath: /data
          # Point to ConfigMap
  volumeClaimTemplates:
      - metadata:
          name: postgresql-db-disk
        spec:
          accessModes: ["ReadWriteOnce"]
          resources:
            requests:
              storage: 18Gi
