k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /title-service/(.*)
        pathType: Prefix
        backend:
          service:
            name: title-micro-service
            port:
              number: 8080
      - path: /episode-service/(.*)
        pathType: Prefix
        backend:
          service:
            name: episode-micro-service
            port:
              number: 8080
      - path: /people-service/(.*)
        pathType: Prefix
        backend:
          service:
            name: people-micro-service   
            port:
              number: 8080
      - path: /principals-service/(.*)
        pathType: Prefix
        backend:
          service:
            name: principals-micro-service
            port:
              number: 8080
